kubernetes/example6/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx2
  name: nginx2
  namespace: production
spec:
  selector:
    matchLabels:
      app: nginx2
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
        - image: nginx:1.9
          name: nginx
          volumeMounts:
            - mountPath: /etc/users
              name: secret-volume-2-bind
      volumes:
        - name: secret-volume-2-bind
          secret:
            secretName: my-secret
