kubernetes/example6/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx-prod
  name: nginx-prod
  namespace: production
spec:
  containers:
  - image: nginx
    imagePullPolicy: Always
    name: nginx-prod
