kubernetes/example6/pod_with_sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: sidecar
  name: sidecar
  namespace: production
spec:
  containers:
    - image: nginx
      name: sidecar
      ports:
        - containerPort: 80
      readinessProbe:
        tcpSocket:
          port: 80
    - image: busybox
      name: main
      readinessProbe:
        tcpSocket:
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 10
      command:
        - sleep
        - "3600"
