kubernetes/example6/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy
  name: nginx
  namespace: production
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: proxy
