kubernetes/example6/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  namespace: production
spec:
  rules:
    - host: "hostname"
      http:
        paths:
          - path: /nginx/
            pathType: Exact
            backend:
              service:
                name: nginx
                port:
                  number: 80
